--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="shoe_description">Shoe Description</string>
     <string name="save">Save</string>
     <string name="cancel">Cancel</string>
+    <string name="incomplete_text">Please enter all fields!</string>
+    <string name="logout">logout</string>
 </resources>
